Fix callout title spacing

--- a/source/stylesheets/callouts.scss
+++ b/source/stylesheets/callouts.scss
@@ -19,6 +19,7 @@
 }
 
 .callout-content {
+  padding-top: 25px;
   padding-left: 3px;
 }
 
@@ -28,7 +29,7 @@
   line-height: 2rem;
   text-transform: uppercase;
   letter-spacing: 0.1em;
-  margin: 0px 0px 25px 0px;
+  margin: 0px 0px 0px 0px;
   padding: 24px 0px 0px 3px;
   code, kbd {
     text-transform: none;
